// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconInputChip > renders correctly if input has bottom border 1`] = `
<div
  class="evocon-input-chip evocon-input-chip--empty evocon-input-chip--border"
  data-v-3966fb58=""
>
  
  
  <!--v-if-->
  <input
    class="chip-input"
    data-v-3966fb58=""
    value=""
  />
  <span
    data-v-3966fb58=""
  />
  <!--v-if-->
</div>
`;

exports[`EvoconInputChip > renders correctly if input value is missing 1`] = `
<div
  class="evocon-input-chip evocon-input-chip--empty"
  data-v-3966fb58=""
>
  
  
  <!--v-if-->
  <input
    class="chip-input"
    data-v-3966fb58=""
    value=""
  />
  <span
    data-v-3966fb58=""
  />
  <!--v-if-->
</div>
`;

exports[`EvoconInputChip > renders correctly if input value is present 1`] = `
<div
  class="evocon-input-chip"
  data-v-3966fb58=""
>
  
  
  <!--v-if-->
  <input
    class="chip-input"
    data-v-3966fb58=""
    value="Test"
  />
  <span
    data-v-3966fb58=""
  />
  <!--v-if-->
</div>
`;

exports[`EvoconInputChip > renders correctly if it is disabled 1`] = `
<div
  class="evocon-input-chip evocon-input-chip--empty evocon-input-chip--disabled"
  data-v-3966fb58=""
>
  
  
  <!--v-if-->
  <input
    class="chip-input"
    data-v-3966fb58=""
    value=""
  />
  <span
    data-v-3966fb58=""
  />
  <!--v-if-->
</div>
`;

exports[`EvoconInputChip > renders correctly if it is dynamic chip 1`] = `
<div
  class="evocon-input-chip evocon-input-chip--empty evocon-input-chip--dynamic"
  data-v-3966fb58=""
>
  
  
  <!--v-if-->
  <input
    class="chip-input"
    data-v-3966fb58=""
    value=""
  />
  <span
    data-v-3966fb58=""
  />
  <!--v-if-->
</div>
`;

exports[`EvoconInputChip > renders correctly if it is dynamic chip and input is opened 1`] = `
<div
  class="evocon-input-chip evocon-input-chip--dynamic evocon-input-chip--is-open"
  data-v-3966fb58=""
>
  
  
  <!--v-if-->
  <input
    class="chip-input"
    data-v-3966fb58=""
    value="Test"
  />
  <span
    data-v-3966fb58=""
  />
  <!--v-if-->
</div>
`;

exports[`EvoconInputChip > renders correctly if it is plain input chip 1`] = `
<div
  class="evocon-input-chip evocon-input-chip--empty evocon-input-chip--plain"
  data-v-3966fb58=""
>
  
  
  <!--v-if-->
  <input
    class="chip-input"
    data-v-3966fb58=""
    value=""
  />
  <span
    data-v-3966fb58=""
  />
  <!--v-if-->
</div>
`;
